--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,18 +4,18 @@
     android:layout_height="match_parent"
     android:id="@+id/layoutChatActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<TextView
-    android:layout_width="wrap_content"
-    android:id="@+id/textViewChat"
-    android:layout_height="wrap_content"
-    android:textAlignment="center"
-    android:text="@string/chat"
-    style="@style/SmallHeader"
-    android:gravity="center"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    ></TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/textViewChat"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="@string/chat"
+        style="@style/SmallHeader"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <ListView
         android:layout_width="match_parent"
         android:id="@+id/mainListView"
@@ -32,19 +32,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:id="@+id/editTextMessage"
             android:layout_weight="1"
-            android:background="@color/fontColorButtons"
-            ></EditText>
+            android:background="@color/fontColorButtons" />
+
         <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:onClick="sendMessage"
-            android:background="@drawable/arrow"
-            ></Button>
+            android:background="@drawable/sendmessage" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
